bdr.BDR2.scala.error
Compilation error:
BDR2:19: error: '=>' expected but '}' found.
} 
^